Closed Bug 612565 Opened 15 years ago Closed 15 years ago

Unresponsive script when loading EtherPad document (or pages which use the ACE editor)

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla2.0b8
Tracking Status
blocking2.0 --- beta8+

People

(Reporter: automatedtester, Assigned: ehsan.akhgari)

References

()

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

When Accessing http://etherpad.mozilla.com:9000/mozauto-101119 I am suddenly getting an unresponsive script. This is working fine in Fx4b7. This has been replicated by Dave Hunt in Test automation too.
Assignee: nobody → general
Component: General → JavaScript Engine
Product: Firefox → Core
QA Contact: general → general
For me, unresponsive script occurs in build: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b8pre) Gecko/20101115 Firefox/4.0b8pre
About:BuildConfig details about:buildconfig Source Built from http://hg.mozilla.org/mozilla-central/rev/edf41ff32f08 Build platform target i386-apple-darwin10.2.0 Build tools Compiler Version Compiler flags gcc-4.2 -arch i386 gcc version 4.2.1 (Apple Inc. build 5646) (dot 1) -Wall -W -Wno-unused -Wpointer-arith -Wcast-align -W -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.5.sdk -fno-strict-aliasing -fpascal-strings -fno-common -pthread -DNO_X11 -DNDEBUG -DTRIMMED -gdwarf-2 -O3 -fomit-frame-pointer g++-4.2 -arch i386 gcc version 4.2.1 (Apple Inc. build 5646) (dot 1) -fno-rtti -fno-exceptions -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wcast-align -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.5.sdk -fno-strict-aliasing -fpascal-strings -fno-common -fshort-wchar -pthread -DNO_X11 -DNDEBUG -DTRIMMED -gdwarf-2 -O3 -fomit-frame-pointer Configure arguments --target=i386-apple-darwin10.2.0 --with-macos-sdk=/Developer/SDKs/MacOSX10.5.sdk --enable-application=browser --enable-update-channel=nightly --enable-update-packaging --enable-tests --enable-codesighs --disable-install-strip --enable-debug-symbols=-gdwarf-2 Source Built from http://hg.mozilla.org/mozilla-central/rev/edf41ff32f08 Build platform target x86_64-apple-darwin10.2.0 Build tools Compiler Version Compiler flags gcc-4.2 -arch x86_64 gcc version 4.2.1 (Apple Inc. build 5646) (dot 1) -Wall -W -Wno-unused -Wpointer-arith -Wcast-align -W -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.6.sdk -fno-strict-aliasing -fpascal-strings -fno-common -pthread -DNO_X11 -DNDEBUG -DTRIMMED -gdwarf-2 -O3 -fomit-frame-pointer g++-4.2 -arch x86_64 gcc version 4.2.1 (Apple Inc. build 5646) (dot 1) -fno-rtti -fno-exceptions -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wcast-align -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.6.sdk -fno-strict-aliasing -fpascal-strings -fno-common -fshort-wchar -pthread -DNO_X11 -DNDEBUG -DTRIMMED -gdwarf-2 -O3 -fomit-frame-pointer Configure arguments --target=x86_64-apple-darwin10.2.0 --with-macos-sdk=/Developer/SDKs/MacOSX10.6.sdk --enable-application=browser --enable-update-channel=nightly --enable-update-packaging --enable-tests --enable-codesighs --disable-install-strip --enable-debug-symbols=-gdwarf-2
Are you guys willing to hunt down a regression range?
As given by Dave on IRC the range is: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=674f2ed15cea&tochange=edf41ff32f08 Could the patches for content editable elements be the cause of it? I will start a hg bisect.
Bisecting is not possible in this time range because of all that broken patches. I will manually cherry-pick changesets.
Summary: Unresponsive Script from EtherPad in Minefield build but works in Fx4b7 → Unresponsive script when loading EtherPad document
Why can't you bisect with broken patches? Just |bisect -s| the broken changesets, no?
As is turned out my local tree was broken since the last bisecting. Have to do a clobber and start over. Will take a bit longer now.
The first bad revision is: changeset: 57481:54d00e3411ab user: Ehsan Akhgari <ehsan@mozilla.com> date: Thu Nov 11 16:40:52 2010 -0500 summary: Bug 611182 - Part 3: Handle dynamic changes to the editable documents and create/remove the bogus node if needed; r=bzbarsky a=blocking-beta8+
Blocks: 611182
blocking2.0: --- → ?
OS: Mac OS X → All
Hardware: x86 → All
Assignee: general → nobody
blocking2.0: ? → beta8+
Component: JavaScript Engine → Editor
QA Contact: general → editor
Assignee: nobody → ehsan
I had this same problem, handed it off to Sayre yesterday, and it seems to be fixed in TraceMonkey nightly build from today. Note that I never saw the "slow script" dialog, it just made my browser hang. I don't think I have ticked the "don't ask me again" on the slow script dialog.
Some clarifications: - I did indeed have the "unresponsive script" set to "don't ask again", but I might have found some buggy behavior there. Will put that in a separate bug. - By "handing off", I meant that I got Sayre to reproduce the bug on his setup, and he took it from there. In any case, it seems fixed on TraceMonkey nightlies.
Alexander, this bug is a recent m-c regression; the patch that caused it hasn't landed on tracemonkey yet.
Attached patch Patch (v1) (obsolete) — Splinter Review
The fix. I will also attach an automated testcase as soon as I can write one.
Attachment #490945 - Flags: review?(roc)
Ah, I see. It wasn't fixed on TM, rather it just wasn't yet occuring.
Attached patch Patch (v1)Splinter Review
Reading Etherpad's source code, I managed to come up with a test case as well.
Attachment #490945 - Attachment is obsolete: true
Attachment #490955 - Flags: review?(roc)
This is actually a problem with all of the pages which use the ACE editor framework, since the code which triggers this bug is in ACE. Resummarizing.
Summary: Unresponsive script when loading EtherPad document → Unresponsive script when loading EtherPad document (or pages which use the ACE editor)
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Verified with Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b8pre) Gecko/20101117 Firefox/4.0b8pre ID:20101117030837
Status: RESOLVED → VERIFIED
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: