Bug 612565 - Don't recurse into document modification listeners for editable documents if the modification to the document is made on the bogus BR node; r=roc a=blocking-beta8+

This fixes an unresponsive script dialog error for Etherpad pages (possibly among other websites).